# monopolpy_companion

./: .gitignore  .pyup.yml  .sourcery.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  monopolpy_companion.py  output.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md  pull_request_template.md
.zencoder/: delta-history.json
conf/: conf.py  default.ini  default.yml
docs/: PLAYABLE_COMPANION_ROADMAP.md
lib/common/: conf.py  run.py  setup_env.py
lib/common/utilities/: log_man.py
lib/gui/: gui.py  run.py
lib/gui/models/images/icons/: main_default.py
lib/gui/models/menus/: top_menu.py
lib/gui/models/popups/: alerts.py
lib/gui/models/windows/: __init__.py  application.py  options.py  player_man.py  start.py
lib/gui/models/windows/pm_wins/: add_new.py
lib/gui/popups/: alerts.py
lib/gui/windows/: application.py  options.py  player_man.py  start_new.py  windows.py
lib/helpers/: logger.py  popup_man.py
monopolpy_companion/conf/: conf.py
monopolpy_companion/game/: __init__.py  board.py  models.py  storage.py
monopolpy_companion/lib/common/: paths.py  player_man.py  run.py  settings.py  state.py
monopolpy_companion/lib/common/errors/: __init__.py  gui.py
monopolpy_companion/lib/common/utilities/: db_man.py
monopolpy_companion/lib/gui/: __init__.py  run.py
monopolpy_companion/lib/gui/models/images/: sys_tray.py
monopolpy_companion/lib/gui/models/popups/: __init__.py  alerts.py
monopolpy_companion/lib/gui/models/windows/: __init__.py  (+4 more)
monopolpy_companion/lib/helpers/: popup_man.py
tests/: test_game_session.py  test_version_metadata.py
(+4 files in other folders)
