[tool.poetry]
name = "monopolpy_companion"
version = "1.0.0-alpha.1"
description = ""
authors = ["Taylor B. <43686206+tayjaybabee@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PySide2 = "^5.15.2"
PySimpleGUIQt = "^0.35.0"
inspy-logger = "2.1a14"
PyYAML = "^6.0"
PySimpleGUI = "^4.60.3"
pytk = "^0.0.2"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.1"


[tool.poetry.scripts]
monopolpy-companion = "monopolpy_companion.lib.gui.run:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
