[tool.poetry]
name = "monopolpy_companion"
version = "1.0.dev3"
description = ""
authors = ["Taylor B. <43686206+tayjaybabee@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
inspy-logger = "2.1a14"
pysimplegui-4-foss = "^4.60.4.1"
pillow = "^11.3.0"
pyyaml = "^6.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
monopolpy-companion = "app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
